--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "author": "Vishal K",
+  "dependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
