--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "author": "Vishal K",
   "dependencies": {
+    "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
 }
