--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Vishal K",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
   }
 }
