--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Vishal K",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20"
